--- a/index.html
+++ b/index.html
@@ -15,8 +15,5 @@
 7.AI and Data Science</p>
 <p style="color:black; font-family:verdana;">Dean's Message Information On behalf of faculty members and staff of the College of Science and Technology I would like to welcome you to the College of Science and Technology at The University of Cambodia. The College of Science and Technology (CoST) was established at the same time as the The University of Cambodia in 2013. College have been developed and transforms with the rise of Science and technology in the 21st century. We drive and inspire our students to value creativity and innovation in the information technology world. The college offers undergraduate and graduate programs such as Computer Science, Information Technology and Electronics and Telecommunication. Our programs prepare students for careers in these disciplines as scientific and ICT professional. In order to meet increasing demand for graduates in computer science and information technology, we have: developed robust and modern curricula; established sophisticated facilities; and hired high qual...
 <h1 style="color:green; font-size:25px; font-family:courier; text-align:center;">Computer Laps</h1>
-<img src="p2.jpg"width="200"height="130">
-<img src="p3.jpg"width="200"height="130">
-<img src="uc.jpg"width="200"height="130">
-</body>
-</html>
+<img src="p1.jpg" width="500" hieght="250">
+</body></html>
